--- a/gizlilikpolitikasi.html
+++ b/gizlilikpolitikasi.html
@@ -54,6 +54,6 @@
     <p>Bu gizlilik politikası, zaman zaman güncellenebilir. Önemli değişiklikler olduğunda, kullanıcılara uygulama aracılığıyla bildirimde bulunacağız.</p>
 
     <h2>7. İletişim</h2>
-   <p>Bu gizlilik politikasıyla ilgili sorularınız veya endişeleriniz varsa, lütfen bu adresten bizimle iletişime geçin: <a href="mailto:aykutbasaran1k@gmail.com" style="color: white;">aykutbasaran1k@gmail.com</a></p>
+   <p>Bu gizlilik politikasıyla ilgili sorularınız veya endişeleriniz varsa, lütfen bu adresten bizimle iletişime geçin: <a href="mailto:aykutbasaranmobil@gmail.com" style="color: white;">aykutbasaranmobil@gmail.com</a></p>
 </body>
 </html>
