--- a/gizlilikpolitikasi.html
+++ b/gizlilikpolitikasi.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <h1>Gizlilik Politikası</h1>
-    <p><strong>BORSACI: Hisse Senedi Filtreleri</strong> olarak, kullanıcılarımızın gizliliğini korumayı taahhüt ediyoruz. Bu gizlilik politikası, <strong>Hisse senedi Filtresi</strong> uygulamasını kullanırken hangi bilgileri topladığımızı, bu bilgileri nasıl kullandığımızı ve nasıl koruduğumuzu açıklar.</p>
+    <p><strong>Hisse Senedi Filtresi</strong> olarak, kullanıcılarımızın gizliliğini korumayı taahhüt ediyoruz. Bu gizlilik politikası, <strong>Hisse senedi Filtresi</strong> uygulamasını kullanırken hangi bilgileri topladığımızı, bu bilgileri nasıl kullandığımızı ve nasıl koruduğumuzu açıklar.</p>
 
     <h2>1. Toplanan Bilgiler</h2>
     <p>Uygulamamız, kullanıcıların kişisel bilgilerini toplamaz. Uygulamanın işlevselliğini sağlamak için yalnızca aşağıdaki türde anonim veriler toplanabilir:</p>
