--- a/rsi30altindakihisseler.html
+++ b/rsi30altindakihisseler.html
@@ -44,7 +44,7 @@
   "showToolbar": false,
   "colorTheme": "dark",
   "locale": "tr"
-  "currentTradingDay": true,
+  "currentTradingDay": bist100,
 }
   </script>
 </div>
