--- a/rsi30altindakihisseler.html
+++ b/rsi30altindakihisseler.html
@@ -33,11 +33,11 @@
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="rsi30altindakihisseler.html" style="color: white;"><b>--Tabloyu Yenile--</b></a></div>
+  <div class="tradingview-widget-copyright"><a href="https://tr.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Tüm piyasaları TradingView üzerinden takip edin</span></a></div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-screener.js" async>
   {
   "width": "100%",
-  "height": 500,
+  "height": 550,
   "defaultColumn": "overview",
   "defaultScreen": "oversold",
   "market": "turkey",
