--- a/rsi30altindakihisseler.html
+++ b/rsi30altindakihisseler.html
@@ -33,48 +33,20 @@
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright">
-    <a href="https://tr.tradingview.com/" rel="noopener nofollow" target="_blank">
-      <span class="blue-text">Tüm piyasaları TradingView üzerinden takip edin</span>
-    </a>
-  </div>
+  <div class="tradingview-widget-copyright"><a href="rsi30altindakihisseler.html" style="color: white;"><b>--Tabloyu Yenile--</b></a></div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-screener.js" async>
   {
   "width": "100%",
-  "height": 550,
-  "defaultColumn": "overview",
+  "height": 500,
   "defaultScreen": "oversold",
   "market": "turkey",
   "showToolbar": false,
   "colorTheme": "dark",
   "locale": "tr"
-  }
+}
   </script>
 </div>
 <!-- TradingView Widget END -->
-
-<script>
-window.addEventListener('load', function() {
-    // Widget yüklendikten sonra belirli bir süre gecikme ile checkbox'ı bulup devre dışı bırakıyoruz
-    setTimeout(function() {
-        let checkbox = document.querySelector('input[aria-label="Current trading day"]');
-        if (checkbox && checkbox.checked) {
-            checkbox.click(); // Eğer "checked" yani tikli ise, tıklayarak işareti kaldırıyoruz
-        }
-    }, 4000); // 4 saniyelik gecikme, widget yüklendikten sonra işlemi yapıyoruz
-});
-</script>
-<script>
-window.addEventListener('load', function() {
-    // Sayfa yüklendikten sonra belirli bir süre gecikme ile checkbox'ı bulup devre dışı bırakıyoruz
-    setTimeout(function() {
-        let checkbox = document.querySelector('input[aria-label="Current trading day"]');
-        if (checkbox && checkbox.checked) {
-            checkbox.click(); // Eğer "checked" yani tikli ise, tıklayarak işareti kaldırıyoruz
-        }
-    }, 2000); // 2 saniyelik gecikme, widget yüklendikten sonra işlemi yapıyoruz
-});
-</script>
 <p><strong>RSI 30 Seviyesinin Altında Kullanılabilecek Stratejiler:</strong></p>
 
 <p><strong>1. RSI Ters Çevirme Stratejisi:</strong></p>
