--- a/rsi30altindakihisseler.html
+++ b/rsi30altindakihisseler.html
@@ -38,8 +38,9 @@
   {
   "width": "100%",
   "height": 500,
+  "defaultColumn": "overview",
   "defaultScreen": "oversold",
-  "market": "turkey",
+  "market": "turkeyBist",
   "showToolbar": false,
   "colorTheme": "dark",
   "locale": "tr"
