--- a/rsi30altindakihisseler.html
+++ b/rsi30altindakihisseler.html
@@ -40,7 +40,7 @@
   "height": 500,
   "defaultColumn": "overview",
   "defaultScreen": "oversold",
-  "market": "turkeyBist",
+  "market": "turkey",
   "showToolbar": false,
   "colorTheme": "dark",
   "locale": "tr"
