--- a/rsi30altindakihisseler.html
+++ b/rsi30altindakihisseler.html
@@ -9,7 +9,7 @@
 <body>
     <header class="full-width-background">
         <h1> RSI 30 Seviyesinin Altındaki Hisseler</h1>
-<p>Veriler gün sonunda yayınlanmaktadır.</p>
+<p><strong>Veriler gün sonunda yayınlanmaktadır.</strong></p>
     </header>
 </body>
 </html>
