--- a/rsi70uzerindekihisseler.html
+++ b/rsi70uzerindekihisseler.html
@@ -9,6 +9,7 @@
 <body>
     <header class="full-width-background">
         <h1>RSI 70 Seviyesinin Üzerindeki Hisseler</h1>
+<p><strong>Veriler gün sonunda yayınlanmaktadır.</strong></p>
     </header>
 </body>
 </html>
