--- a/yilinendusugu.html
+++ b/yilinendusugu.html
@@ -9,6 +9,7 @@
 <body>
     <header class="full-width-background">
         <h1>52 Haftanın En Düşüğündeki Hisseler</h1>
+<p><strong>Veriler gün sonunda yayınlanmaktadır.</strong></p>
     </header>
 </body>
 </html>
