--- a/gununencokkazandiranlari.html
+++ b/gununencokkazandiranlari.html
@@ -10,6 +10,7 @@
     <header class="full-width-background">
         <h1>Günün En Çok Kazandıran Hisseleri
 (Tam Liste)</h1>
+<p><strong>Veriler gün sonunda yayınlanmaktadır.</strong></p>
     </header>
 </body>
 </html>
